plugins {
  id('application')
}

group 'pl.boringstuff'
version '1.0.0'

repositories {
  mavenCentral()
}

java {
  sourceCompatibility = JavaVersion.VERSION_15
  targetCompatibility = JavaVersion.VERSION_15
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}

task generateReport {
  doLast {
    println 'Hello world!'
  }
}

application {
  mainClass = 'pl.boringstuff.ConsoleAppRunner'
}

dependencies {
  compile group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
  compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
  compile group: 'org.freemarker', name: 'freemarker', version: '2.3.30'
}
